--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,6 +8,7 @@
         <a href="{% url 'index' %}"
            class="nav-link">Home</a> <!-- Home Up -->
     </li>
+    {% if not es_mayor_a_30_dias %}
     <li class="nav-item dropdown">
         <a href=""
            class="nav-link dropdown-toggle"
@@ -22,6 +23,8 @@
                class="dropdown-item">Tema</a>
         </div>
     </li>
+    
+    
     <li class="nav-item dropdown">
         <a href="estadisticas.html"
            class="nav-link dropdown-toggle"
@@ -34,6 +37,7 @@
                class="dropdown-item">Dashboard</a>
         </div>
     </li>
+    {% endif %}
     <li class="nav-item">
         <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
@@ -442,6 +446,7 @@
                         </div>
                     </div>
                 </div>
+                {% if not es_mayor_a_30_dias %}
                 <div class="popoverContainer d-none">
                     <div class="media">
                         <div class="media-left mr-12pt">
@@ -504,15 +509,15 @@
                     </div>
 
                 </div>
-
+                {% endif %}
             </div>
-
+            
             <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col">
 
                 <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
                     data-toggle="popover" data-trigger="click">
 
-                    <a href="student-course.html" class="card-img-top js-image" data-position="" data-height="140">
+                    <a href="" class="card-img-top js-image" data-position="" data-height="140">
                         <img src="{% static 'img/fondos/LoginBackground.webp' %} " alt="course">
                         <span class="overlay__content">
                             <span class="overlay__action d-flex flex-column text-center">
@@ -543,6 +548,7 @@
                             <!-- <small class="text-50">6 hours</small> -->
                         </div>
                     </div>
+                    
                     <div class="card-footer">
                         <div class="row justify-content-between">
                             <div class="col-auto d-flex align-items-center">
@@ -556,6 +562,7 @@
                         </div>
                     </div>
                 </div>
+                {% if not es_mayor_a_30_dias %}
                 <div class="popoverContainer d-none">
                     <div class="media">
                         <div class="media-left mr-12pt">
@@ -618,9 +625,9 @@
                     </div>
 
                 </div>
-
+                {% endif %}
             </div>
-
+            
             <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col">
 
                 <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
@@ -670,6 +677,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="popoverContainer d-none">
                     <div class="media">
                         <div class="media-left mr-12pt">
@@ -828,65 +836,55 @@
 {% if  es_mayor_a_30_dias %}
 <script>
     
-   // Función para verificar si el usuario ha realizado el examen diagnóstico
-   function checkDiagnosticExam() {
-        // Aquí deberías incluir la lógica para verificar si el usuario ha realizado el examen
-        // Por ejemplo, podrías hacer una llamada a una API o verificar una variable en JavaScript
-        // Supongamos que tenemos una variable 'hasDoneDiagnosticExam' que indica el estado
-        const hasDoneDiagnosticExam = false; // Cambia esto según la lógica de tu aplicación
-        
-        return hasDoneDiagnosticExam;
-    }
-
-    // Mostrar SweetAlert modal para el pago de la membresía PRO
-    swal({
-        text: "¿Ya has cubierto el pago de la membresía PRO?",
-        icon: "info",
-        buttons: ["No", "Sí"],
-    })
-    .then((response) => {
-        if (response) {
-            // Si el usuario ha cubierto el pago, verificar si ha realizado el examen diagnóstico
-            if (checkDiagnosticExam()) {
-                swal({
-                    text: "¿Ya has realizado el examen diagnóstico?",
-                    icon: "info",
-                    buttons: ["No", "Sí"],
-                })
-                .then((diagnosticResponse) => {
-                    if (diagnosticResponse) {
-                        swal("¡Excelente!", "Puedes continuar con el uso de la plataforma.", "success");
-                    } else {
-                        swal({
-                            text: "Por favor, realiza el examen diagnóstico.",
-                            icon: "info",
-                            buttons: ["Cancelar", "Ir al examen"],
-                        })
-                        .then((goToExam) => {
-                            if (goToExam) {
-                                // Redirigir al usuario al examen diagnóstico
-                                window.location.href = "url_del_examen_diagnostico"; // Cambia esto por la URL real del examen diagnóstico
-                            }
-                        });
-                    }
-                });
-            } else {
-                swal({
-                    text: "Recuerda realizar el examen diagnóstico.",
-                    icon: "info",
-                    buttons: ["Cancelar", "Ir al examen"],
-                })
-                .then((goToExam) => {
-                    if (goToExam) {
-                        // Redirigir al usuario al examen diagnóstico
-                        window.location.href = "/simulador_diagnostico/"; // Cambia esto por la URL real del examen diagnóstico
-                    }
-                });
+ // Mostrar SweetAlert modal para el pago de la membresía PRO
+swal({
+    text: "¿Ya has cubierto el pago de la membresía PRO?",
+    icon: "info",
+    buttons: ["No", "Sí"],
+})
+.then((response) => {
+    if (response) {
+        swal("¡Excelente!", "Puedes continuar con el uso de la plataforma.", "success");
+    } else {
+        swal({
+            text: "Por favor, realiza el pago de la membresía PRO.",
+            icon: "warning",
+            buttons: ["Cancelar", "Ir a pagar"],
+        })
+        .then((goToPayment) => {
+            if (goToPayment) {
+                // Redirigir al usuario a la página de pago
+                window.location.href = "{% url 'pricing' %}"; // Cambia esto por la URL real de la página de pago
             }
-        } else {
-            swal("¡Atención!", "Por favor, realiza el pago de la membresía PRO.", "warning");
-        }
-    });
+        });
+    }
+});
+</script>
+
+{% else %}
+<script>
+swal({
+    text: "¿Has realizado tu examen diagnóstico?",
+    icon: "info",
+    buttons: ["No", "Sí"],
+})
+.then((response) => {
+    if (response) {
+        swal("¡Excelente!", "Puedes continuar con el uso de la plataforma.", "success");
+    } else {
+        swal({
+            text: "Por favor, realiza tu examen diagnóstico.",
+            icon: "info",
+            buttons: ["Cancelar", "Ir a la acción"],
+        })
+        .then((goToAction) => {
+            if (goToAction) {
+                // Redirigir al usuario a la acción requerida
+                window.location.href = "{% url 'simulador_diagnostico' %}"; // Cambia esto por la URL real de la acción requerida
+            }
+        });
+    }
+});
 </script>
 {% endif %}
 {% endblock %}
