--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -119,7 +119,7 @@
             
 
                 <!-- Page Content /////////////////////////////////////////////////////////-->
-                 {%block appcontenido%}  
+                 {%block appcontenido %}  
                     
 
 
@@ -196,6 +196,7 @@
                             <span class="sidebar-menu-text">Home</span>
                         </a>
                     </li>
+                    {% if not es_mayor_a_30_dias %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'mostrar_temas' %}">
@@ -203,6 +204,8 @@
                             <span class="sidebar-menu-text">Simuladores</span>
                         </a>
                     </li>
+                    {% endif %}
+                    {% if not es_mayor_a_30_dias %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'resultados' %}">
@@ -210,6 +213,8 @@
                             <span class="sidebar-menu-text">Estadisticas</span>
                         </a>
                     </li>
+                    {% endif %}
+                    {% if not es_mayor_a_30_dias %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'foro_comentarios' %}">
@@ -217,6 +222,8 @@
                             <span class="sidebar-menu-text">Comentarios</span>
                         </a>
                     </li>
+                    {% endif %}
+                    {% if not es_mayor_a_30_dias %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'blog' %}">
@@ -224,6 +231,7 @@
                             <span class="sidebar-menu-text">Foro Q&A</span>
                         </a>
                     </li>
+                    {% endif %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'logout' %}">
@@ -232,6 +240,7 @@
                         </a>
                     </li>
                 </ul>
+                {% if not es_mayor_a_30_dias %}
                 <div class="sidebar-heading">Dashboard</div>
                 <ul class="sidebar-menu">
 
@@ -252,12 +261,14 @@
             
 
                 </ul>
+                {% endif %}
 
+                {% if not es_mayor_a_30_dias %}
                 <div class="sidebar-heading">Centro de Conexion</div>
-                <ul class="sidebar-menu">
+                
 
                   
-                
+                <ul class="sidebar-menu">
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            data-toggle="collapse"
@@ -278,7 +289,7 @@
                             
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button"
-                                   href="">
+                                   href="{% url 'historial_pagos' %}">
                                     <span class="sidebar-menu-text">Payment</span>
                                 </a>
                             </li>
@@ -293,7 +304,7 @@
                             
                    
                 </ul>
-
+                {% endif %}
                 
 
                 <!-- // END Sidebar Content -->
