--- a/api/templates/Simulator/simulator_topic.html
+++ b/api/templates/Simulator/simulator_topic.html
@@ -17,7 +17,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -76,7 +76,7 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="" class="card-title mr-3">Simulador ENARM</a>
+                        <a href="" class="card-title mr-3">Simulador ENARM 365</a>
                         <small class="text-50">Simulador Tema {{tema.nombreTemario}}</small>
                     </div>
                     
