--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -18,7 +18,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -72,7 +72,7 @@
     </div>
     <div class="mdk-box__content justify-content-center">
         <div class="hero container page__container text-center py-112pt">
-            <h1 class="text-white text-shadow">Supera el ENARM con nosotros.</h1>
+            <h1 class="text-white text-shadow">Supera el ENARM 365 con nosotros.</h1>
             <p class="lead measure-hero-lead mx-auto text-white text-shadow mb-48pt">Practica todos los dias, en todo
                 momento, en todos lados.</p>
 
@@ -223,7 +223,7 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="{% url 'mostrar_enarm' %}" class="card-title mr-3">Simulador ENARM</a>
+                        <a href="{% url 'mostrar_enarm' %}" class="card-title mr-3">Simulador ENARM 365</a>
                         <small class="text-50">Practica todo el examen.</small>
                     </div>
                     <div class="d-flex align-items-center flex-column flex-sm-row posts-card__meta">
@@ -297,7 +297,7 @@
                     <div class="card-body flex">
                         <div class="d-flex">
                             <div class="flex">
-                                <a class="card-title" href="{% url 'mostrar_enarm' %}">Simulador ENARM</a>
+                                <a class="card-title" href="{% url 'mostrar_enarm' %}">Simulador ENARM 365</a>
                                 <small class="text-50 font-weight-bold mb-4pt">Suscripción Pro</small>
                             </div>
                             <a href="" data-toggle="tooltip" data-title="Add Favorite"
@@ -336,7 +336,7 @@
                                 class="rounded">
                         </div>
                         <div class="media-body">
-                            <div class="card-title mb-0">ENARM</div>
+                            <div class="card-title mb-0">ENARM 365</div>
                             <p class="lh-1 mb-0">
                                 <span class="text-50 small">with</span>
                                 <span class="text-50 small font-weight-bold">Suscripción Pro</span>
@@ -344,7 +344,7 @@
                         </div>
                     </div>
 
-                    <p class="my-16pt text-70">Simula el examen de ENARM, con toda las preguntas.</p>
+                    <p class="my-16pt text-70">Simula el examen de ENARM 365, con toda las preguntas.</p>
 
                     <div class="mb-16pt">
                         <div class="d-flex align-items-center">
@@ -698,7 +698,7 @@
                     <div class="mb-16pt">
                         <div class="d-flex align-items-center">
                             <span class="material-icons icon-16pt text-50 mr-8pt">check</span>
-                            <p class="flex text-50 lh-1 mb-0"><small>Practica el ENARM de forma Gratuita</small></p>
+                            <p class="flex text-50 lh-1 mb-0"><small>Practica el ENARM 365 de forma Gratuita</small></p>
                         </div>
                         <div class="d-flex align-items-center">
                             <span class="material-icons icon-16pt text-50 mr-8pt">check</span>
