--- a/api/templates/Estadisticos/resultados.html
+++ b/api/templates/Estadisticos/resultados.html
@@ -18,7 +18,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -339,7 +339,7 @@
         {% endif %}
     </div>
         
-        <h3>Examen - Enarm</h3>
+        <h3>Examen - Enarm 365</h3>
         <div class="row card-group-row">
             {% if intentos %}
         {% for intento in intentos %}
