--- a/api/templates/Simulator/portal_enarm.html
+++ b/api/templates/Simulator/portal_enarm.html
@@ -17,7 +17,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -65,7 +65,7 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador por ENARM</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Simulador por ENARM 365</h5>
         </div>
         <label for="">Selecciona un tema para iniciar el simulador acorde a ese tema.</label>
         <div class="posts-cards">
