--- a/api/templates/Simulator/simulator_enarm_dos.html
+++ b/api/templates/Simulator/simulator_enarm_dos.html
@@ -17,7 +17,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -63,7 +63,7 @@
     <div class="container page__container">
 
         <div class="page-separator">
-            <div class="page-separator__text">Bienvenido al Simulador ENARM 50%</div>
+            <div class="page-separator__text">Bienvenido al Simulador ENARM 365 50%</div>
         </div>
 
 
@@ -76,8 +76,8 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="" class="card-title mr-3">Simulador ENARM</a>
-                        <small class="text-50">Simulador ENARM 50%</small>
+                        <a href="" class="card-title mr-3">Simulador ENARM 365</a>
+                        <small class="text-50">Simulador ENARM 365 50%</small>
                     </div>
                     
                     <div class="d-flex align-items-center flex-column flex-sm-row posts-card__meta">
@@ -118,7 +118,7 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador ENARM 50%</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Simulador ENARM 365 50%</h5>
         </div>
         <label for="">Para las preguntas a continuación, por favor elige la mejor opción para completar</label>
         <div class="posts-cards">
