--- a/api/templates/Simulator/simulator_enarm_tres.html
+++ b/api/templates/Simulator/simulator_enarm_tres.html
@@ -18,7 +18,7 @@
                 <a href="{% url 'simulator_free' %}"
                    class="dropdown-item">Gratuito</a>
                 <a href="{% url 'mostrar_enarm' %}"
-                   class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+                   class="dropdown-item"><span class="mr-16pt">Enarm365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
                 <a href="{% url 'mostrar_temas' %}"
                    class="dropdown-item">Tema</a>
             </div>
@@ -64,7 +64,7 @@
     <div class="container page__container">
 
         <div class="page-separator">
-            <div class="page-separator__text">Bienvenido al Simulador ENARM 100%</div>
+            <div class="page-separator__text">Bienvenido al Simulador ENARM365 100%</div>
         </div>
 
 
@@ -77,8 +77,8 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="" class="card-title mr-3">Simulador ENARM</a>
-                        <small class="text-50">Simulador ENARM 100%</small>
+                        <a href="" class="card-title mr-3">Simulador ENARM 365</a>
+                        <small class="text-50">Simulador ENARM365 100%</small>
                     </div>
                     
                     <div class="d-flex align-items-center flex-column flex-sm-row posts-card__meta">
@@ -119,7 +119,7 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador ENARM 100%</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Simulador ENARM 365 100%</h5>
         </div>
         <label for="">Para las preguntas a continuación, por favor elige la mejor opción para completar</label>
         <div class="posts-cards">
