--- a/api/templates/Simulator/simulator_free.html
+++ b/api/templates/Simulator/simulator_free.html
@@ -18,7 +18,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
@@ -80,7 +80,7 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="" class="card-title mr-3">Simulador ENARM</a>
+                        <a href="" class="card-title mr-3">Simulador ENARM365</a>
                         <small class="text-50">Simulador Gratuito</small>
                     </div>
                     {% if not Intento %}
