--- a/api/templates/blog.html
+++ b/api/templates/blog.html
@@ -11,7 +11,7 @@
         <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown" data-caret="false">Simuladores</a>
         <div class="dropdown-menu">
             <a href="{% url 'simulator_free' %}" class="dropdown-item">Gratuito</a>
-            <a href="{% url 'mostrar_enarm' %}" class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span
+            <a href="{% url 'mostrar_enarm' %}" class="dropdown-item"><span class="mr-16pt">Enarm 365 Completo</span> <span
                     class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}" class="dropdown-item">Tema</a>
         </div>
