--- a/api/templates/blog1.html
+++ b/api/templates/blog1.html
@@ -17,7 +17,7 @@
             <a href="{% url 'simulator_free' %}"
                class="dropdown-item">Gratuito</a>
             <a href="{% url 'mostrar_enarm' %}"
-               class="dropdown-item"><span class="mr-16pt">Enarm Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
+               class="dropdown-item"><span class="mr-16pt">Enarm365 Completo</span> <span class="badge badge-notifications badge-accent text-uppercase ml-auto">Pro</span></a>
             <a href="{% url 'mostrar_temas' %}"
                class="dropdown-item">Tema</a>
         </div>
