--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -135,7 +135,8 @@
                     <div class="fullbleed bg-primary" style="opacity: .5"></div>
                     <div class="posts-card-popular__content">
                         <div class="card-body d-flex align-items-center">
-                           
+                            <div class="avatar-group flex">
+                                
                             </div>
                             <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
                                     class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
@@ -158,7 +159,12 @@
                     <div class="posts-card-popular__content">
                         <div class="card-body d-flex align-items-center">
                             <div class="avatar-group flex">
-                               
+                                <div class="avatar avatar-xs" data-toggle="tooltip" data-placement="top"
+                                    title="Janell D.">
+                                    <a href=""><img
+                                            src="{% static 'img/avatares/256_jeremy-banks-798787-unsplash.jpg' %}"
+                                            alt="Avatar" class="avatar-img rounded-circle"></a>
+                                </div>
                             </div>
                             <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
                                     class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
@@ -181,7 +187,12 @@
                     <div class="posts-card-popular__content">
                         <div class="card-body d-flex align-items-center">
                             <div class="avatar-group flex">
-                              
+                                <div class="avatar avatar-xs" data-toggle="tooltip" data-placement="top"
+                                    title="Janell D.">
+                                    <a href=""><img
+                                            src="{% static 'img/avatares/256_rsz_1andy-lee-642320-unsplash.jpg' %}"
+                                            alt="Avatar" class="avatar-img rounded-circle"></a>
+                                </div>
                             </div>
                             <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
                                     class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
@@ -220,7 +231,24 @@
                         <div class="media ml-sm-auto align-items-center">
                             <div class="media-left mr-2 avatar-group">
 
-                            
+                                <div class="avatar avatar-xs" data-toggle="tooltip" data-placement="top"
+                                    title="Janell D.">
+                                    <img src="{% static 'img/avatares/256_rsz_1andy-lee-642320-unsplash.jpg' %}"
+                                        alt="Avatar" class="avatar-img rounded-circle">
+                                </div>
+
+                                <div class="avatar avatar-xs" data-toggle="tooltip" data-placement="top"
+                                    title="Janell D.">
+                                    <img src="{% static 'img/avatares/256_michael-dam-258165-unsplash.jpg' %}"
+                                        alt="Avatar" class="avatar-img rounded-circle">
+                                </div>
+
+                                <div class="avatar avatar-xs" data-toggle="tooltip" data-placement="top"
+                                    title="Janell D.">
+                                    <img src="{% static 'img/avatares/256_luke-porter-261779-unsplash.jpg' %}"
+                                        alt="Avatar" class="avatar-img rounded-circle">
+                                </div>
+
                             </div>
                             <div class="media-body">
 
