--- a/api/templates/forocomentarios.html
+++ b/api/templates/forocomentarios.html
@@ -113,7 +113,7 @@
                             
                             </div>
                             <div class="media-body media-middle">
-                                <a href="student-profile.html" class="card-title">{{comentario.fk_User.first_name}}</a>
+                                <a href="student-profile.html" class="card-title">{{comentario.fk_User.username}}</a>
                                 <div class="rating mt-4pt">
                                     {% if comentario.valorMensaje == 1%}
                                     <span class="rating__item"><span class="material-icons">star</span></span>
