--- a/api/templates/blogcomentarios.html
+++ b/api/templates/blogcomentarios.html
@@ -109,7 +109,7 @@
                             </a>
                         </div>
                         <div class="media-body media-middle">
-                            <a href="" class="card-title">{{comentario.fk_User.first_name}}</a>
+                            <a href="" class="card-title">{{comentario.fk_User.username}}</a>
                             
                         </div>
                     </div>
