--- a/api/static/css/styles.css
+++ b/api/static/css/styles.css
@@ -310,3 +310,16 @@ th, td {
 th {
   background-color: #f4f4f4;
 }
+.eye-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.form-group {
+  position: relative;
+}
