--- a/api/static/css/styles.css
+++ b/api/static/css/styles.css
@@ -311,12 +311,12 @@ th {
   background-color: #f4f4f4;
 }
 .eye-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  right: 10px;
-  top: 50%;
+  background: none !important;
+  border: none !important;
+  cursor: pointer !important;
+  position: absolute !important;
+  right: 30px;
+  top: 40%;
   transform: translateY(-50%);
 }
 
