--- a/api/templates/registration/login.html
+++ b/api/templates/registration/login.html
@@ -17,7 +17,7 @@
                         {{ field }}
                         {% if field.name == "password" %}
                         <button type="button" id="togglePassword" class="eye-button">
-                            <span id="eyeIcon" class="material-icons">visibility</span>
+                            <span id="eyeIcon" class="material-icons">👁️</span>
                         </button>
                         {% endif %}
                     </div>
