--- a/api/templates/registration/register.html
+++ b/api/templates/registration/register.html
@@ -6,15 +6,32 @@
 
 {%block content%}
 <body class="backregister">
-   
-
-<div class = "logincontainer"> 
-   <form method="post" action="{%url 'register' %}" class="login">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Register</button>
-    <a href="{% url 'login' %}">Already have an account?</a>
-   </form>
-</div>
+   <div class="logincontainer"> 
+       <form method="post" action="{% url 'register' %}" class="login">
+           {% csrf_token %}
+           <div>
+               {% for field in form %}
+                   <div class="form-group">
+                       {{ field.label_tag }}
+                       <div class="input-container">
+                           {{ field }}
+                           {% if field.name == "password1" or field.name == "password2" %}
+                               <button type="button" class="toggle-password eye-button">
+                                   <span class="eyeIcon material-icons">visibility</span>
+                               </button>
+                           {% endif %}
+                       </div>
+                       {% if field.errors %}
+                           <div class="error">{{ field.errors }}</div>
+                       {% endif %}
+                   </div>
+               {% endfor %}
+           </div>
+           <button type="submit">Register</button>
+           <a href="{% url 'login' %}">Already have an account?</a>
+       </form>
+   </div>
+   <script src="{% static 'js/password_toggle.js' %}"></script>
 </body>
+
 {%endblock%}
