--- a/api/templates/Simulator/portal_enarm.html
+++ b/api/templates/Simulator/portal_enarm.html
@@ -186,8 +186,8 @@
                                         </div>
                                         
                                         <div class="flex">
-                                            <div class="card-title">Simulador {{mostrarTemarioEnarmDos.nombreTemario}}%</div>
-                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador {{mostrarTemarioEnarmDos.nombreTemario}}%</small></p>
+                                            <div class="card-title">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</div>
+                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</small></p>
                                         </div>
                                     </div>
                                 </div>
@@ -208,8 +208,8 @@
                                     class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title">Simulador {{mostrarTemarioEnarmDos.nombreTemario}}%</div>
-                                <p class="text-50 d-flex lh-1 mb-0 small">mostrarTemarioEnarmDos {{temario.nombreTemario}}%</p>
+                                <div class="card-title">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</div>
+                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</p>
                             </div>
                         </div>
     
@@ -277,8 +277,8 @@
                                         </div>
                                         
                                         <div class="flex">
-                                            <div class="card-title">Simulador {{mostrarTemarioEnarmTres.nombreTemario}}%</div>
-                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador {{mostrarTemarioEnarmTres.nombreTemario}}%</small></p>
+                                            <div class="card-title">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</div>
+                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</small></p>
                                         </div>
                                     </div>
                                 </div>
@@ -299,8 +299,8 @@
                                     class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title">Simulador {{mostrarTemarioEnarmTres.nombreTemario}}%</div>
-                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador {{mostrarTemarioEnarmTres.nombreTemario}}%</p>
+                                <div class="card-title">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</div>
+                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</p>
                             </div>
                         </div>
     
