--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -93,7 +93,7 @@
                     <i class="material-icons text-white">subscriptions</i>
                 </div>
                 <div class="flex">
-                    <div class="card-title mb-4pt">8,000+ Preguntas</div>
+                    <div class="card-title mb-4pt">Preguntas nuevas cada mes</div>
                     <p class="card-subtitle ">Practica en todas las areas.</p>
                 </div>
             </div>
