--- a/api/templates/Simulator/portal_enarm.html
+++ b/api/templates/Simulator/portal_enarm.html
@@ -95,8 +95,8 @@
                                         </div>
                                         
                                         <div class="flex">
-                                            <div class="card-title">Simulador {{mostrarTemarioEnarmUno.nombreTemario}}%</div>
-                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador {{mostrarTemarioEnarmUno.nombreTemario}}%</small></p>
+                                            <div class="card-title">Simulador Enarm 365 25%</div>
+                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador Enarm 365 25%</small></p>
                                         </div>
                                     </div>
                                 </div>
@@ -117,8 +117,8 @@
                                     class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title">Simulador {{mostrarTemarioEnarmUno.nombreTemario}}%</div>
-                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador {{mostrarTemarioEnarmUno.nombreTemario}}%</p>
+                                <div class="card-title">Simulador Enarm 365 25%</div>
+                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador Enarm 365 25%</p>
                             </div>
                         </div>
     
@@ -186,8 +186,8 @@
                                         </div>
                                         
                                         <div class="flex">
-                                            <div class="card-title">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</div>
-                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</small></p>
+                                            <div class="card-title">Simulador Enarm 365 50%</div>
+                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador Enarm 365 50%</small></p>
                                         </div>
                                     </div>
                                 </div>
@@ -208,8 +208,8 @@
                                     class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</div>
-                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador 365{{mostrarTemarioEnarmDos.nombreTemario}}%</p>
+                                <div class="card-title">Simulador Enarm 365 50%</div>
+                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador Enarm 365 50%</p>
                             </div>
                         </div>
     
@@ -277,8 +277,8 @@
                                         </div>
                                         
                                         <div class="flex">
-                                            <div class="card-title">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</div>
-                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</small></p>
+                                            <div class="card-title">Simulador Enarm 365 100%</div>
+                                            <p class="flex text-50 lh-1 mb-0"><small>Simulador Enarm 365 100%</small></p>
                                         </div>
                                     </div>
                                 </div>
@@ -299,8 +299,8 @@
                                     class="rounded">
                             </div>
                             <div class="media-body">
-                                <div class="card-title">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</div>
-                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador 365{{mostrarTemarioEnarmTres.nombreTemario}}%</p>
+                                <div class="card-title">Simulador Enarm 365 100%</div>
+                                <p class="text-50 d-flex lh-1 mb-0 small">Simulador Enarm 365 100%</p>
                             </div>
                         </div>
     
