--- a/api/templates/Simulator/simulator_free.html
+++ b/api/templates/Simulator/simulator_free.html
@@ -144,7 +144,7 @@
                     {% for pregunta, respuestas_mezcladas in preguntas_con_respuestas_mezcladas %}
                     <form action="" class="formulario-gratuito pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }}">
                         {% csrf_token %}
-                        <h5 class="title-question"><i class=" text-muted-light mr-1">{{ forloop.counter }} .- </i>Pregunta: {{ pregunta.nombrePregunta }}</h5>
+                        <h5 class="title-question">Pregunta: {{ pregunta.nombrePregunta }}</h5>
                         {% for respuesta in respuestas_mezcladas %}
                             <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
                                 <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
