cambios de preguntas completo

--- a/api/templates/Simulator/simulator_enarm_tres.html
+++ b/api/templates/Simulator/simulator_enarm_tres.html
@@ -124,7 +124,7 @@
                     {% for pregunta, respuestas_mezcladas in preguntas_con_respuestas_mezcladas %}
                     <form action="" class="formulario-timer pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }}">
                         {% csrf_token %}
-                        <h5 class="title-question"><i class="material-icons text-muted-light mr-1">{{ forloop.counter }} </i>Pregunta: {{ pregunta.nombrePregunta }}</h5>
+                        <h5 class="title-question">Pregunta: {{ pregunta.nombrePregunta }}</h5>
                         {% for respuesta in respuestas_mezcladas %}
                         <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
                             <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
